Bug 188417 - Dolphin's breadcrumb widget does not show the correct path if there are duplicated separators
Summary: Dolphin's breadcrumb widget does not show the correct path if there are dupli...
Status: RESOLVED FIXED
Alias: None
Product: kdelibs
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 4.2
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Peter Penz
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-03-29 19:59 UTC by Raphael Kubo da Costa
Modified: 2009-04-02 03:07 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Raphael Kubo da Costa 2009-03-29 19:59:31 UTC
Version:           svn r945481 (using Devel)
OS:                Linux
Installed from:    Compiled sources

When entering a path with repeated separators in Dolphin's breadcrumb editor, such as "/tmp//foo" (or calling Dolphin from the command line with 'dolphin /tmp//foo'), the correct directory (/tmp/foo) is listed, however the breadcrumb widget only shows the directories prior to the duplicated path separator (in this case, / and tmp).

In case of a longer path, such as /tmp/foo/bar:
* /tmp/foo//bar shows /, tmp and foo in the breadcrumb
* /tmp//foo/bar shows / and tmp
* /tmp//foo//bar shows / and tmp
Comment 1 Raphael Kubo da Costa 2009-03-30 01:11:06 UTC
This is actually a bug in KUrlNavigator. A patch has been sent to reviewboard: http://reviewboard.kde.org/r/470/

I can't change the Product here in Bugzilla, so until someone fixes the report it'll remain related to Dolphin.
Comment 2 Raphael Kubo da Costa 2009-04-02 03:07:20 UTC
SVN commit 948028 by rkcosta:

Strip duplicated path separators in KUrlNavigator.

BUG: 188417


 M  +9 -6      kurlnavigator.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=948028