Strip duplicated path separators in KUrlNavigator.

BUG: 188417

svn path=/trunk/KDE/kdelibs/; revision=948028